# SymptomSync-Health-App

./: .refactor-checklist.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENTS.md  Dockerfile  Makefile  NOTIFICATIONS.md  README.md  RUN_20260319_ONE_BY_ONE_2.txt  RUN_20260319_ONE_BY_ONE_3.txt  RUN_20260319_ONE_BY_ONE_4.txt  RUN_20260320_ONE_BY_ONE_5.txt  RUN_20260321_ONE_BY_ONE_6_CONT_1742Z.txt  RUN_20260328_SUBSET_B26_SymptomSync-Health-App.txt  RUN_20260330_SUBSET_B27_SymptomSync-Health-App.txt  RUN_20260331_FULL_B28_SymptomSync-Health-App.txt  RUN_20260331_SUBSET_B29_SymptomSync-Health-App.txt  RUN_20260401_FULL_B30_SymptomSync-Health-App.txt  SOLID_REFACTOR.md  codex-solid-refactor-20260313-rerun-2.txt  codex-solid-refactor-20260313083840-part2.txt  codex-solid-refactor-20260314-rerun-3.txt  codex-solid-refactor-20260315-rerun-4.txt  codex-solid-refactor-20260316-rerun-6.txt  codex-solid-refactor-20260317-rerun-8.txt  docker-compose.yml  package-lock.json  publish_devcontainer.sh  refactor-solid-principles-note.js  solidRefactorMarkerPass6.js  solid_principles_refactor.js
agentic_ai/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
agentic_ai/agents/: __init__.py  base_agent.py  diagnostic_analyzer.py  knowledge_retriever.py  orchestrator.py  recommendation_generator.py  risk_assessor.py  symptom_extractor.py
agentic_ai/chains/: __init__.py  retrieval_chain.py  symptom_chain.py
agentic_ai/config/: __init__.py  prometheus.yml  settings.py
agentic_ai/graphs/: __init__.py  assembly_line.py  state.py
agentic_ai/mcp_server/: __init__.py  models.py  routes.py  server.py
agentic_ai/model_context_server/: __init__.py  decision_support.py  http_gateway.py  mcp_instance.py  models.py  primitives.py  primitives_core.py  primitives_extended.py  primitives_ops.py  primitives_prompts.py  primitives_resources.py  primitives_triage.py  runtime.py  server.py  service.py
agentic_ai/tests/: __init__.py  test_agents.py  test_graph.py  test_mcp_server.py
agentic_ai/utils/: __init__.py  (+2 more)
(+318 files in other folders)
